After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753598 - vaapiwindow_wayland: Don't return GST_FLOW_ERROR on flushing
vaapiwindow_wayland: Don't return GST_FLOW_ERROR on flushing
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
: 753597 (view as bug list)
Depends on:
Blocks: 750547
 
 
Reported: 2015-08-13 19:20 UTC by Olivier Crête
Modified: 2015-08-25 17:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapiwindow_wayland: Don't return GST_FLOW_ERROR on flushing (1.59 KB, patch)
2015-08-13 19:20 UTC, Olivier Crête
committed Details | Review

Description Olivier Crête 2015-08-13 19:20:14 UTC
Setting the sink to flushing causes gst_vaapi_window_wayland_sync() to
return FALSE which makes gst_vaapi_window_wayland_render() return
FALSE which ends up posting an ERROR message in
gst_vaapisink_show_frame_unlocked(). Solution is to just return TRUE
in the EBUSY case.
Comment 1 Olivier Crête 2015-08-13 19:20:31 UTC
Created attachment 309229 [details] [review]
vaapiwindow_wayland: Don't return GST_FLOW_ERROR on flushing

Setting the sink to flushing causes gst_vaapi_window_wayland_sync() to
return FALSE which makes gst_vaapi_window_wayland_render() return
FALSE which ends up posting an ERROR message in
gst_vaapisink_show_frame_unlocked(). Solution is to just return TRUE
in the EBUSY case.
Comment 2 Víctor Manuel Jáquez Leal 2015-08-24 16:23:10 UTC
*** Bug 753597 has been marked as a duplicate of this bug. ***